fixed css, keyboard stays open when message was sent on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ html {
     /* width: 800px;
     height: 600px; */
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,7 +21,8 @@ html {
 
 #messages {
     list-style-type: none;
-    height: calc(100% );
+    height: calc(100% -170px);
+    max-height: 80%;
     border: 2px solid black;
     border-radius: 20px;
     width: 100%; /*calc(100% - 20px);*/
